--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tealbase/ssr",
-  "version": "0.5.2",
+  "version": "0.6.0",
   "description": "Use the tealbase JavaScript library in popular server-side rendering (SSR) frameworks.",
   "main": "dist/main/index.js",
   "module": "dist/module/index.js",
@@ -45,7 +45,6 @@
     "@tealbase/tealbase-js": "^2.43.4"
   },
   "dependencies": {
-    "cookie": "^0.7.0",
-    "@types/cookie": "^0.6.0"
+    "cookie": "^1.0.1"
   }
 }
